EQStats in a single line