@@ -1,6 +1,8 @@
 package nl.ru.icis.oracle;
 
 import java.util.Collection;
+import java.util.HashMap;
+import java.util.Map;
 
 import org.checkerframework.checker.nullness.qual.Nullable;
 
@@ -8,6 +10,8 @@ import de.learnlib.api.logging.LearnLogger;
 import de.learnlib.api.oracle.EquivalenceOracle;
 import de.learnlib.api.oracle.EquivalenceOracle.MealyEquivalenceOracle;
 import de.learnlib.api.query.DefaultQuery;
+import de.learnlib.api.statistic.StatisticSUL;
+import de.learnlib.filter.statistic.Counter;
 import net.automatalib.automata.transducers.MealyMachine;
 import net.automatalib.words.Word;
 
@@ -16,6 +20,7 @@ public class EQWrapperHypSize<I, O> implements MealyEquivalenceOracle<I, O> {
 	private final LearnLogger LOGGER = LearnLogger.getLogger(EQWrapperHypSize.class);
 	private MealyEquivalenceOracle<I, O> eqOracle;
 	private int iterationNum = 0; 
+	private Map<String,StatisticSUL> statisticSuls = new HashMap<>();
 	
 	public EQWrapperHypSize(MealyEquivalenceOracle<I, O> oracle) {
 		this.eqOracle = oracle;
@@ -23,6 +28,10 @@ public class EQWrapperHypSize<I, O> implements MealyEquivalenceOracle<I, O> {
 	
 	public EQWrapperHypSize(EquivalenceOracle<MealyMachine<?, I, ?, O>, I, Word<O>> oracle) {
 		this.eqOracle = (MealyEquivalenceOracle<I,O>) oracle;
+	}
+	
+	public void addStatisticsSUL(String name, StatisticSUL stats) {
+		this.statisticSuls.put(name, stats);
 	}
 
 	@Override
@@ -34,7 +43,18 @@ public class EQWrapperHypSize<I, O> implements MealyEquivalenceOracle<I, O> {
 			qry_size = qryToReturn.getInput().size();
 		}
 		iterationNum++;
-		LOGGER.logEvent(String.format("EQStats:{'Iter':%d,'HypSize':%d,'CESize':%d}", iterationNum, hypothesis.size(), qry_size));
+		
+		StringBuffer sb = new StringBuffer();
+		sb.append("EQStats:{");
+		sb.append("'Iter':%d".formatted(iterationNum));
+		sb.append(",'HypSize':%d".formatted(hypothesis.size()));
+		sb.append(",'CESize':%d".formatted(qry_size));
+		for (String k : this.statisticSuls.keySet()) {
+			Counter counter = (Counter) this.statisticSuls.get(k).getStatisticalData();
+			sb.append(",'%s':%d".formatted(k,counter.getCount()));
+		}
+		sb.append("}");
+		LOGGER.logEvent(sb.toString());		
 		return qryToReturn;
 	}
 
